Fixed sidebar to not overlap with map #15 #12

--- a/src/css/Map.scss
+++ b/src/css/Map.scss
@@ -1,14 +1,5 @@
 div.leaflet-container {
-    position: absolute;
-    width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 0;
 }
 
 
