--- a/src/css/Sidebar.scss
+++ b/src/css/Sidebar.scss
@@ -1,9 +1,8 @@
 div.sidebar {
-    position: absolute;
-    z-index: 100;
-    height: calc(100% - 48px);
-    margin: 24px;
+    height: 100%;
+    margin: 0;
     float: left;
+    background-color: #fff;
 }
 
 div.sidebar__card {
